@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  *
- * $Id: package_internal.h,v 1.3 2003/11/19 09:24:14 waldi Exp $
+ * $Id: package_internal.h,v 1.4 2004/02/01 16:38:11 waldi Exp $
  */
 
 #ifndef DEBIAN_INSTALLER__PACKAGE_INTERNAL_H
@@ -81,6 +81,8 @@ struct internal_di_package_parser_data
  */
 di_destroy_notify
   internal_di_package_destroy_func;
+
+di_package_priority internal_di_package_priority_text_from_rstring (const di_rstring *text);
 
 /** @} */
 #endif
