@@ -2,8 +2,9 @@ libdebian-installer (0.18.cvs) UNRELEASED; urgency=low
 
   * Bastian Blank
     - Minimal Packages parser parses Size and Priority.
+    - Packages parser uses simpler matches.
 
- -- Bastian Blank <waldi@debian.org>  Sun, 01 Feb 2004 14:19:57 +0100
+ -- Bastian Blank <waldi@debian.org>  Sun, 01 Feb 2004 17:37:37 +0100
 
 libdebian-installer (0.18) unstable; urgency=low
 
